<resources>
    <string name="app_name">MetronomePro</string>
    <string name="select_time_main">SELECT TIME</string>
    <string name="start_text">Play!</string>
    <string name="button_faster_text">\u003E</string>
    <string name="button_slower_text">\u003C</string>
    <string name="button_fast_forward_text">\u003E\u003E</string>
    <string name="button_back_forward_text">\u003C\u003C</string>
    <string name="title_activity_metronome">Metronome</string>
    <string name="sync_text">Sync</string>
    <string name="no_bt">Bluetooth not found</string>

    <string name="import_button">IMPORT SONG</string>
    <string name="create_s_button">CREATE SONG</string>


    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_activity_song_creator">Editor</string>
    <string name="title_activity_select_next_songs">SelectNextSongs</string>
    <string name="title_activity_modify_playlist">ModifyPlaylistActivity</string>
    <string name="title_activity_peer">activitypeer</string>
    <string name="title_activity_atsp_test">AtspTest</string>
    <string name="saved_string">Saved</string>
    <string name="name_song">Name:</string>
    <string name="BPM_song">BPM:</string>
    <string name="beats_song">Beats:</string>
    <string name="title_activity_select_song_for_playlist">SelectSongForPlaylist</string>
    <string name="title_activity_test_db">TestDB</string>

    <string name="exstorage_permission">Allow external storage reading</string>
    <string name="path">Path: </string>
    <string name="error_import">IMPORT</string>
    <string name="file_copied">File copied in : </string>
    <string name="import_failed">Import failed</string>
    <string name="file_type_wrong">File type not supported</string>

    <string name="title_add_song">ADD SONG</string>
    <string name="file_picker_title">DEVICE DIRECTORY</string>
    <string name="title_home">METRONOME</string>
</resources>
