<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_metronome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/AppThemeDark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="a2016.soft.ing.unipd.metronomepro.MetronomeActivity"
    tools:showIn="@layout/activity_metronome">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/Button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/button_back_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back_forward_text" />


        <TextView
            android:id="@+id/number_of_BPM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="35sp" />
        <Button
            android:id="@+id/button_fast_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/button_fast_forward_text" />

    </android.support.v7.widget.LinearLayoutCompat>


    <TextView
        android:id="@+id/debug_time_millis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="43dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/show_BPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/select_time_main"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/sync_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button_layout"
        android:layout_centerHorizontal="true"
        android:text="@string/sync_text" />
</RelativeLayout>
